--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,141 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-      }
-    </style>
-  </head>
-  <body>
-    <button id="changeColor"></button>
-    <script src="popup.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Environment Warning</title>
+  <style>
+    body {
+      width: 280px;
+      padding: 0;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+      font-size: 14px;
+      color: #333;
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      padding: 15px;
+      background-color: #f8f9fa;
+      border-bottom: 1px solid #e0e0e0;
+    }
+    .logo {
+      width: 24px;
+      height: 24px;
+      margin-right: 10px;
+    }
+    .title {
+      font-size: 16px;
+      font-weight: 600;
+      margin: 0;
+      flex-grow: 1;
+    }
+    .settings-btn {
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+      color: #666;
+      padding: 5px;
+      border-radius: 4px;
+    }
+    .settings-btn:hover {
+      background-color: #e9ecef;
+    }
+    .content {
+      padding: 15px;
+    }
+    .env-info {
+      margin-bottom: 15px;
+    }
+    .env-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 6px;
+      background-color: #f8f9fa;
+    }
+    .env-label {
+      font-weight: 500;
+      color: #495057;
+    }
+    .env-value {
+      font-weight: 500;
+      padding: 4px 10px;
+      border-radius: 12px;
+      font-size: 13px;
+      text-transform: capitalize;
+    }
+    .warning {
+      padding: 12px;
+      border-radius: 6px;
+      margin: 15px 0;
+      font-size: 13px;
+      line-height: 1.4;
+      background-color: #fff3cd;
+      border-left: 4px solid #ffc107;
+    }
+    .warning.alert {
+      background-color: #f8d7da;
+      border-left-color: #dc3545;
+    }
+    .warning.success {
+      background-color: #d4edda;
+      border-left-color: #28a745;
+    }
+    .current-url {
+      display: block;
+      margin: 10px 0;
+      padding: 8px;
+      background-color: #f1f3f5;
+      border-radius: 4px;
+      font-family: monospace;
+      font-size: 12px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .footer {
+      padding: 10px 15px;
+      border-top: 1px solid #e9ecef;
+      font-size: 12px;
+      color: #6c757d;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="header">
+    <img src="images/get_started48.png" class="logo" alt="Logo">
+    <h1 class="title">Environment Warning</h1>
+    <button class="settings-btn" id="settingsButton" title="Settings">⚙️</button>
+  </div>
+  
+  <div class="content">
+    <div class="current-url" id="currentUrl">Loading...</div>
+    
+    <div class="env-info">
+      <div class="env-item">
+        <span class="env-label">Environment:</span>
+        <span id="envName" class="env-value">-</span>
+      </div>
+      <div class="env-item">
+        <span class="env-label">Status:</span>
+        <span id="envStatus" class="env-value">-</span>
+      </div>
+    </div>
+
+    <div id="warningMessage" class="warning" style="display: none;">
+      <strong>⚠️ Warning:</strong> This appears to be a production environment. Proceed with caution.
+    </div>
+  </div>
+  
+  <div class="footer">
+    Environment Warning v1.0
+  </div>
+  
+  <script src="popup.js"></script>
+</body>
 </html>
